--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   wakelock: ^0.6.2
   flutter_vibrate: ^1.3.0
   audioplayers: ^5.2.1
+  socket_io_client: ^2.0.3+1
 
   cupertino_icons: ^1.0.2
 
@@ -33,7 +34,6 @@ flutter:
 
   assets:
     - assets/
-    # - assets/user/
     - assets/questions/
     - assets/sounds/
 
